[project]
name = "brancher"
version = "0.1.1"
description = "Brancher - Simple TODO TUI powered by Supabase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "rich>=14.2.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "click>=8.0.0",
]

[project.scripts]
brancher = "cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
